--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,6 @@ header a {
 	outline: 1px solid #c8c8c8;
 	font-size: 12px;
 	width: 100%;
-	text-align: center;
 }
 
 .ctg {
@@ -166,10 +165,15 @@ header a {
 }
 
 .sponsors img {
-	width: 40%;
-	height: 40%;
 	-webkit-background-size: cover;
 	background-size: cover;
+	width: 100%;
+	height: 100%;
+}
+
+.sponsors a {
+	width: 40%;
+	height: 40%;
 }
 
 .blogHead {
@@ -224,7 +228,6 @@ header a {
 	color: #393939;
 	padding: 0 15px;
 	text-transform: uppercase;
-	text-decoration: underline;
 	font-weight: bold;
 	margin-bottom: 10px;
 }
@@ -235,13 +238,12 @@ header a {
 	justify-content: space-around;
 	align-items: center;
 	background-color: #141414;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	width: 100%;
 }
 
 .navButtons .button {
 	margin-top: 5px;
-	margin-left: 5px;
 	width: 30%;
 	font-family: NevisBold;
 	text-transform: uppercase;
@@ -269,11 +271,36 @@ header a {
 	margin-bottom: 10px;
 }
 
-.bigSponsor img {
+.bigSponsor a {
 	width: 80%;
 	height: 80%;
+}
+
+.bigSponsor img {
 	-webkit-background-size: cover;
 	background-size: cover;
+	width: 100%;
+	height: 100%;
+}
+
+.banner {
+	width: 100%;
+	padding: 5px 0;
+	background-color: #252525;
+	outline: 1px solid #484848;
+}
+
+.banner a {
+	height: 0;
+	width: 0;
+}
+
+.banner img {
+	display: block;
+	-webkit-background-size: cover;
+	background-size: cover;
+	width: 97%;
+	margin: 0 auto;
 }
 
 .bigFooter {
@@ -350,11 +377,11 @@ footer div:first-child {
 	font-weight: bold;
 }
 
-footer div span {
-	text-decoration: underline;
+.footerArticle a {
+	text-decoration: none;
 }
 
-@media (min-width:769px) {
+@media (min-width:768px) {
 	header .container {
 		display: flex;
 		flex-wrap: wrap;
@@ -516,7 +543,7 @@ footer div span {
 		display: flex;
 		width: 90%;
 		margin: 0 auto;
-		margin-bottom: 10px;
+		margin-bottom: 20px;
 		align-items: flex-start;
 		justify-content: flex-start;
 	}
@@ -528,6 +555,21 @@ footer div span {
 
 	.navButtons .button:last-child {
 		margin-left: 10px;
+	}
+
+	.bannerWrap {
+		width: 90%;
+		margin: 0 auto;
+		margin-bottom: 15px;
+	}
+
+	.banner {
+		width: 690px;
+		padding: 10px;
+	}
+
+	.banner img {
+		width: 100%;
 	}
 
 	.bigFooter {
@@ -553,6 +595,7 @@ footer div span {
 		margin-bottom: 5px;
 		min-width: 27%;
 		max-width: 27%;
+		cursor: pointer;
 	}
 
 	.footerBlock:last-child .footerArticle:last-child {
